# pepos

./: .gitignore  Cargo.toml
config/: pepos.toml
crates/compositor/: Cargo.toml
crates/compositor/src/: main.rs
crates/dock/: Cargo.toml
crates/dock/src/: config.rs  main.rs  render.rs  state.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: apps.rs  config.rs  main.rs  render.rs  shm.rs  state.rs
crates/menubar/: Cargo.toml
crates/menubar/src/: config.rs  main.rs  render.rs  shm.rs  state.rs
iso/: build.sh
